# Qt-Time-Tracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-linux.sh  linux-package.sh  main.py  tasks.py
.github/workflow/: format.yaml
.github/workflows/: commit.yaml  format.yaml  release.yaml
cmake/: CodeCoverage.cmake
debian/: TimeTracker.desktop  control
src/: description.cpp  description.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  settings.cpp  settings.hpp
tests/: CMakeLists.txt  test_description.cpp
